@@ -292,7 +292,7 @@ bgp_adj_out_unset (struct bgp_node *rn, struct peer *peer, struct prefix *p,
       FIFO_ADD (&peer->sync[afi][safi]->withdraw, &adv->fifo);
 
       /* Schedule packet write. */
-      BGP_WRITE_ON (peer->t_write, bgp_write, *peer->fd);
+      BGP_WRITE_ON (peer->t_write, bgp_write, peer->fd);
     }
   else
     {
