@@ -1,3 +1,8 @@
+2004-05-01 Paul Jakma <paul@dishone.st>
+
+	* Revert the attempted clean-up of the dummy peer hack, reverts
+	  patchsets 435 (see 2004-02-17 below) and 456. 
+
 2004-04-16 rivo nurges <rix@estpak.ee>
 
 	* bgpd.h, bgp_debug.c: update cease subcodes to
